package iterator;

/**
 * @author ioeah
 * @version 1.0
 * @date 2023/4/4 8:59
 */
public interface Television {

    TVIterator createIterator();
}
